add advanced hand animation

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -77,11 +77,10 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+ActionMappings=(ActionName="FireLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Trigger_Click)
-+ActionMappings=(ActionName="FireRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Trigger_Click)
 +AxisMappings=(AxisName="GripLeft",Scale=1.000000,Key=OculusTouch_Left_Grip_Axis)
 +AxisMappings=(AxisName="GripRight",Scale=1.000000,Key=OculusTouch_Right_Grip_Axis)
-+AxisMappings=(AxisName="FireLeftAxis",Scale=1.000000,Key=None)
++AxisMappings=(AxisName="TriggerLeft",Scale=1.000000,Key=OculusTouch_Left_Trigger_Axis)
++AxisMappings=(AxisName="TriggerRight",Scale=1.000000,Key=OculusTouch_Right_Trigger_Axis)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
