--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -81,6 +81,9 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="GripRight",Scale=1.000000,Key=OculusTouch_Right_Grip_Axis)
 +AxisMappings=(AxisName="TriggerLeft",Scale=1.000000,Key=OculusTouch_Left_Trigger_Axis)
 +AxisMappings=(AxisName="TriggerRight",Scale=1.000000,Key=OculusTouch_Right_Trigger_Axis)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_Y)
++AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_X)
++AxisMappings=(AxisName="CharacterRotation",Scale=1.000000,Key=OculusTouch_Right_Thumbstick_X)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
