Add Widget for ChangeLevel ( work in progress )

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,6 +5,7 @@ GameDefaultMap=/Game/Maps/MainMap.MainMap
 
 
 EditorStartupMap=/Game/Maps/MainMap.MainMap
+GameInstanceClass=/Script/VRTestProject.VRTestProjectGameInstance
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
